test/syntaxerrors/TestWrongOr.jdc
int i = 10;

int j = 5;

if (i == 10 | j == 10) {
    println("yes");
}